[tool.poetry]
name = "oneilsh-agent-explorations"
version = "0.1.0"
description = "Explorations in tool-using agents"
authors = ["Shawn O'Neil <oneilsh@gmail.com>"]
readme = "README.md"
#packages = [{include = "oneilsh_agent_explorations"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<4.0"
agent-smith-ai = "^1.0.0"
python-dotenv = "^1.0.0"
semanticscholar = "^0.5.0"
tabulate = "^0.9.0"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
