[tool.poetry]
name = "oneilsh-agent-explorations"
version = "0.1.0"
description = "Explorations in tool-using agents"
authors = ["Shawn O'Neil <oneilsh@gmail.com>"]
readme = "README.md"
#packages = [{include = "oneilsh_agent_explorations"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<4.0"
agent-smith-ai = {path = "/Users/oneils/Documents/projects/tislab/llm_tests/agent-smith-ai/dist/agent_smith_ai-1.0.2-py3-none-any.whl"}
python-dotenv = "^1.0.0"
semanticscholar = "^0.5.0"
tabulate = "^0.9.0"
plotly = "^5.17.0"
gradio = "^3.44.4"
llm = "^0.11"
trafilatura = "^1.6.2"
markdown-it-py = "^3.0.0"
mdit-py-plugins = "^0.4.0"
mistune = "^3.0.1"
pyyaml = "^6.0.1"
umap = "^0.1.1"
sklearn = "^0.0.post9"
scikit-learn = "^1.3.1"
pyvis = "^0.3.2"
oaklib = "^0.5.20"
curies = "^0.6.4"
pdfminer-six = "^20221105"
neo4j = "^5.14.0"
duckdb = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
